It is working! There is a hacky thing where an empty json file gets build along with the project for distribution.

--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -16,6 +16,8 @@
     "src/lib"
   ],
   "dependencies": {
-    "requirejs": "~2.2.0"
+    "requirejs": "~2.2.0",
+    "samsarajs": "^0.2.1",
+    "almond": "0.3.0"
   }
 }
