--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "license": "MIT",
   "dependencies": {
     "yeoman-generator": "^0.24.1",
-    "chalk": "^1.0.0",
+    "chalk": "^1.0.0"
   }
 }
