Added a generator to make a project for any of the examples. Made samsara:app an alias for th Logo example

--- a/example/templates/bower.json
+++ b/example/templates/bower.json
@@ -13,7 +13,7 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "src/lib"
+    "js/lib"
   ],
   "dependencies": {
     "requirejs": "~2.2.0",
