--- a/example/templates/bower.json
+++ b/example/templates/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "requirejs": "~2.2.0",
-    "samsarajs": "^0.2.1",
+    "samsarajs": ">=0.2.1",
     "almond": "0.3.0"
   }
 }
